[feat] Implement API UpdateReviewCards
